<resources>
    <string name="app_name">Biyesheji</string>

    <!-- Strings related to login -->
    <string name="prompt_email">学号</string>
    <string name="prompt_password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">输入的学号错误</string>
    <string name="error_invalid_password">输入的密码无效</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请输入用户名</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_userinformation">Userinformation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="successful">成功</string>
</resources>
